fix: update Dockerfile
fix cannot run spring boot app:
- fix missing preview option
- fix path (for some fkin reasons, no docs update the path)