@@ -7,6 +7,10 @@ FROM eclipse-temurin:21-jdk-alpine@sha256:ebfc28d35b192c55509e3c7cc597d91136528f
 ARG JAR_FILE=target/*.jar
 COPY --from=compile project/${JAR_FILE} application.jar
 RUN java -Djarmode=layertools -jar application.jar extract
+RUN ls -la application
+RUN ls -la dependencies
+RUN ls -la spring-boot-loader
+RUN ls -la snapshot-dependencies
 
 FROM eclipse-temurin:21-jdk-alpine@sha256:ebfc28d35b192c55509e3c7cc597d91136528f1a9d3261965b44663af9eb4b4b AS final
 LABEL authors="ilikeblue"
@@ -21,4 +25,4 @@ RUN chown -R javauser:javauser /app
 USER javauser
 
 EXPOSE 8080
-ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
+ENTRYPOINT ["java", "--enable-preview", "org.springframework.boot.loader.launch.JarLauncher"]
